--- a/touaki/longin.css
+++ b/touaki/longin.css
@@ -1,10 +1,16 @@
 body{
-    background-image: url(photo/bgimg.jpg);
-    
+    background-image: url(photo/bgimg.jpg);   
 }
 body p {
     font-family:"Noto Sans TC", sans-serif;
     color: #333;
+    line-height: 15px;
+    letter-spacing: 2px;
+}
+a{
+    color: black;
+    letter-spacing: 2px;
+    text-decoration: none;
 }
 .head nav {
     width: 100%;
@@ -237,92 +243,6 @@ display: none;
     letter-spacing: 8px;
     font-family: "Condiment", sans-serif;
 }
-
-/* banner */
-.news-img  img{
-    width: 100%;
-    height: 500px;
-    position: relative;
-}
-a{
-    color: black;
-    letter-spacing: 2px;
-    text-decoration: none;
-}
-p {
-    line-height: 15px;
-    letter-spacing: 2px;/* 文字間距 */  
-}
-.news{
-    padding: 0 120px;
-    margin-bottom: 50px;
-}
-.txt {
-    font-size: 64px;
-    color: #fff;
-    position: absolute; 
-    top: 30%;
-    left: 40%; 
-}
-.btn {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    
-}
-.btn button{
-    padding: 20px 15px ;
-    font-size: 18px;
-    margin: 0 20px;
-    border-radius: 20px;
-    border: none;
-    background-color: #F6F6F6;
-    cursor: pointer;
-}
-.content1{
-    display: block;
-    text-align: left;
-}
-.event li {
-    width: 100%;
-    padding: 10px 0px;
-    border-bottom: 1px solid #000;
-}
-h4 {
-    font-size: 18px;
-    font-weight: 600;
-}
-.event li a{
-    line-height: 2.5em;
-}
-@media screen and (max-width: 767px) {
-    .news-img img{
-        height: 200px;
-        
-    }
-    .news-img h1{
-        font-size: 50px;
-        color: #fff;
-        position: absolute; 
-        top: 20%;
-        left: 20%; 
-        letter-spacing: 8px;
-        font-family: "Condiment", sans-serif;
-    }
-    .news{
-        display: flex;
-        padding: 0;
-    }
-    .btn{
-        width: 24%;
-        padding-left: 10px ;
-    }
-    .btn button {
-        margin: 0;
-        margin-bottom: 20px;
-    }
-
-}
 /* 麵包屑 */
 .breadcrumb{
     width: 1200px;
@@ -337,14 +257,147 @@ h4 {
     border: none;
     padding-block: 5px;
 }
-.breadcrumb li a{
-    font-family: unset;
-}
 .breadcrumb ul li:not(:first-child)::before {
     content: "/";
     margin: 0px 8px;
     font-weight: 600;
 }
+/* 會員登入 */
+.LoginContainer{
+    border: 1px solid #999;
+    margin: 20px auto;
+    max-width: 800px;
+}
+.ParagraphBody{
+    display: flex;
+}
+.Parag-img{
+    width: 400px;
+    font-size: 0;
+}
+.Parag-img img{
+    width: 100%;
+}
+.FlowContainer{
+    margin: 0px 30px;
+}
+.FlowContainer h1{
+    font-size: 30px;
+    font-family:"Noto Sans TC",serif ;
+    padding-bottom: 20px;
+    margin-top: 30px;
+}
+.FormTitle{
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 10px;
+}
+.PhoneWrapper{
+    position: relative;
+    margin-bottom: 10px;
+}
+.PhoneWrapper i{
+    position: absolute;
+    left: 7px;
+    top: 10px;
+    font-size: 20px;
+}
+.box {
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #999;
+    box-sizing: border-box;
+    font-size: 14px;
+    height: 40px;
+    padding:0px 0px 0px 30px;
+}
+.buttonlongin{
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    box-sizing: border-box;
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+    border: 1px solid #000;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    margin-bottom: 10px;
+}
+.line-span{
+    display: flex;
+    font-size: 12px;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.line-span::before{
+    content: "";
+    flex: 4 1 0%;
+    display: block;
+    border-top: 1px solid black; 
+    margin-right: 20px;
+}
+.line-span::after {
+    content: "";
+    flex: 4 1 0%;/*主尺寸 收縮 初始大小*/
+    display: block;
+    border-top: 1px solid black; 
+    margin-left: 20px; 
+}
+.fackbook{
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: pointer;
+    border: 1px solid #2D55A8;
+    background-color: #2D55A8;
+    color: #fff;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    align-items: center;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+.line{
+    border-radius: 5px;
+    font-size: 14px;
+    text-align: center;
+    box-sizing: border-box;
+    cursor: pointer;
+    border: 1px solid #06C755;
+    background-color: #06C755;
+    color: #fff;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    align-items: center;
+    cursor: pointer;
+}
+@media screen and (max-width: 767px) {
+    .LoginContainer{
+        margin-top: 50px;
+    }
+    .Parag-img{
+        display: none;
+    }
+    .FlowContainer{
+        margin: unset;
+    }
+    .ParagraphBody{
+        justify-content: center;
+    }
+    .line{
+        margin-bottom: 50px;
+    }
+    .breadcrumb{
+        display: none;
+    }
+}
+
+
 /* 頁尾 */
 .footer-logo {
     width: 100%;
