--- a/touaki/頭尾.css
+++ b/touaki/頭尾.css
@@ -1,10 +1,8 @@
 body{
     background-image: url(photo/bgimg.jpg);
-    
-}
-body p {
-    font-family:"Noto Sans TC", sans-serif;
+    font-family: "Noto Sans TC", sans-serif;
     color: #333;
+    /* font-size:  clamp(32px, 4.6875vw, 82px); */
 }
 .head nav {
     width: 100%;
@@ -237,92 +235,6 @@ display: none;
     letter-spacing: 8px;
     font-family: "Condiment", sans-serif;
 }
-
-/* banner */
-.news-img  img{
-    width: 100%;
-    height: 500px;
-    position: relative;
-}
-a{
-    color: black;
-    letter-spacing: 2px;
-    text-decoration: none;
-}
-p {
-    line-height: 15px;
-    letter-spacing: 2px;/* 文字間距 */  
-}
-.news{
-    padding: 0 120px;
-    margin-bottom: 50px;
-}
-.txt {
-    font-size: 64px;
-    color: #fff;
-    position: absolute; 
-    top: 30%;
-    left: 40%; 
-}
-.btn {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-    
-}
-.btn button{
-    padding: 20px 15px ;
-    font-size: 18px;
-    margin: 0 20px;
-    border-radius: 20px;
-    border: none;
-    background-color: #F6F6F6;
-    cursor: pointer;
-}
-.content1{
-    display: block;
-    text-align: left;
-}
-.event li {
-    width: 100%;
-    padding: 10px 0px;
-    border-bottom: 1px solid #000;
-}
-h4 {
-    font-size: 18px;
-    font-weight: 600;
-}
-.event li a{
-    line-height: 2.5em;
-}
-@media screen and (max-width: 767px) {
-    .news-img img{
-        height: 200px;
-        
-    }
-    .news-img h1{
-        font-size: 50px;
-        color: #fff;
-        position: absolute; 
-        top: 20%;
-        left: 20%; 
-        letter-spacing: 8px;
-        font-family: "Condiment", sans-serif;
-    }
-    .news{
-        display: flex;
-        padding: 0;
-    }
-    .btn{
-        width: 24%;
-        padding-left: 10px ;
-    }
-    .btn button {
-        margin: 0;
-        margin-bottom: 20px;
-    }
-
-}
 /* 麵包屑 */
 .breadcrumb{
     width: 1200px;
@@ -337,14 +249,15 @@ h4 {
     border: none;
     padding-block: 5px;
 }
-.breadcrumb li a{
-    font-family: unset;
-}
 .breadcrumb ul li:not(:first-child)::before {
     content: "/";
     margin: 0px 8px;
     font-weight: 600;
 }
+
+
+
+
 /* 頁尾 */
 .footer-logo {
     width: 100%;
@@ -355,11 +268,11 @@ h4 {
 .top-btn{
     position: absolute;
     top: 5%;
-    left: 40%;
+    left: 50%;
     height: 20px;
 }
 .footer-logo i{
-    padding-left: 32px;
+    padding-left: 35px;
     font-size: 20px;
     color: #fff;
 }
@@ -382,8 +295,7 @@ h4 {
     font-size: 12px; 
 }
 .address{
-    margin-top: 80px;
-    margin-bottom: 20px;
+    margin-top: 40px;
 }
 .address p{
     line-height: 2;
@@ -393,9 +305,9 @@ h4 {
     margin-right: 10px;
     object-fit: contain;
 }
-.logo-img img{
-    width: 100px;
-    margin: 90px 120px 0px 200px;
+.footer-logo >img {
+    width: 95px;
+    margin: 30px 120px 30px 200px;
 }
 .account-icon{
     position: absolute;
@@ -410,23 +322,19 @@ h4 {
     .footer-logo{
         display: block;
     }
-    .logo-img img {
+    .footer-logo >img {
         width: 50px;
-        margin: 50px 10px 10px;
+        margin: 10px 10px ;
         object-fit: contain;
     }
     .address{
         margin-left: 10px;
         margin-top: 0px;
-        margin-bottom: 0px;
         letter-spacing: 1.5px;
-    }
-    .address p:nth-child(4){
-        padding-bottom: 20px;
     }
     .account-icon{
         right: 0px;
-        bottom: 40px;
+        bottom: 20px;
     }
     .logo-phone , .logo-map{
         padding-bottom: 5px;
