--- a/touaki/menu.css
+++ b/touaki/menu.css
@@ -1,8 +1,10 @@
 body{
     background-image: url(photo/bgimg.jpg);
-    font-family: "Noto Sans TC", sans-serif;
     color: #333;
-    /* font-size:  clamp(32px, 4.6875vw, 82px); */
+}
+body p {
+    font-family:"Noto Sans TC", sans-serif;
+    color: #333;
 }
 .head nav {
     width: 100%;
@@ -364,6 +366,9 @@ p {
     .coffee-bg  ,.cake-bg , .sandwich{
         display: inline-grid;
     }
+    .breadcrumb{
+        display: none;
+    }
 }
 /* 頁尾 */
 .footer-logo {
@@ -375,7 +380,7 @@ p {
 .top-btn{
     position: absolute;
     top: 5%;
-    left: 40%;
+    left: 50%;
     height: 20px;
 }
 .footer-logo i{
@@ -453,5 +458,8 @@ p {
     }
     .footer-logo .address p{
         letter-spacing: 1px;
+    }
+    .top-btn{
+        left: 40%;
     }
 }
