--- a/touaki/coffee beans.css
+++ b/touaki/coffee beans.css
@@ -1,8 +1,10 @@
 body{
     background-image: url(photo/bgimg.jpg);
-    font-family: "Noto Sans TC", sans-serif;
+    
+}
+body p {
+    font-family:"Noto Sans TC", sans-serif;
     color: #333;
-    /* font-size:  clamp(32px, 4.6875vw, 82px); */
 }
 .head nav {
     width: 100%;
@@ -226,18 +228,9 @@ display: none;
     width: 12px;
     margin: 5px;
 }
-.news-img h1{
-    font-size: 64px;
-    color: #fff;
-    position: absolute; 
-    top: 25%;
-    left: 43%; 
-    letter-spacing: 8px;
-    font-family: "Condiment", sans-serif;
-}
 /* 麵包屑 */
 .breadcrumb{
-    width: 1200px;
+    width: 100%;
     margin: auto;
 }
 .breadcrumb ul{
@@ -249,15 +242,50 @@ display: none;
     border: none;
     padding-block: 5px;
 }
+.breadcrumb li a{
+    font-family: unset;
+}
 .breadcrumb ul li:not(:first-child)::before {
     content: "/";
     margin: 0px 8px;
     font-weight: 600;
 }
+/* banner */
+.front-img{
+    position: relative;
+}
+.front-img img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover
+}
+.breadcrumb a{
+    letter-spacing: 2px;
+}
+a{
+    color: black;
+    text-decoration: none;
+}
+p {
+    line-height: 15px;
+    letter-spacing: 2px;/* 文字間距 */  
+}
+.front-img h1{
+    font-size: 64px;
+    color: #fff;
+    position: absolute; 
+    top: 50%;
+    left: 56%;
+    transform: translate(-50%,-50%); 
+    letter-spacing: 8px;
+    font-family: "Condiment", sans-serif;
+    line-height: 1.5;
+}
+/*商品列表*/
+.coffee-list li{
+    height: 30px;
 
-
-
-
+}
 /* 頁尾 */
 .footer-logo {
     width: 100%;
@@ -272,7 +300,7 @@ display: none;
     height: 20px;
 }
 .footer-logo i{
-    padding-left: 35px;
+    padding-left: 32px;
     font-size: 20px;
     color: #fff;
 }
@@ -295,7 +323,8 @@ display: none;
     font-size: 12px; 
 }
 .address{
-    margin-top: 40px;
+    margin-top: 80px;
+    margin-bottom: 20px;
 }
 .address p{
     line-height: 2;
@@ -305,9 +334,9 @@ display: none;
     margin-right: 10px;
     object-fit: contain;
 }
-.footer-logo >img {
-    width: 95px;
-    margin: 30px 120px 30px 200px;
+.logo-img img{
+    width: 100px;
+    margin: 90px 120px 0px 200px;
 }
 .account-icon{
     position: absolute;
@@ -322,25 +351,28 @@ display: none;
     .footer-logo{
         display: block;
     }
-    .footer-logo >img {
+    .logo-img img {
         width: 50px;
-        margin: 10px 10px ;
+        margin: 50px 10px 10px;
         object-fit: contain;
     }
     .address{
         margin-left: 10px;
         margin-top: 0px;
+        margin-bottom: 0px;
         letter-spacing: 1.5px;
+    }
+    .address p:nth-child(4){
+        padding-bottom: 20px;
     }
     .account-icon{
         right: 0px;
-        bottom: 15px;
+        bottom: 40px;
     }
     .logo-phone , .logo-map{
         padding-bottom: 5px;
     }
     .footer-logo .address p{
         letter-spacing: 1px;
-        word-break: break-all;
     }
 }
