--- a/touaki/new.css
+++ b/touaki/new.css
@@ -154,7 +154,7 @@ display: none;
     position: relative;
     position: fixed;
     top:60%;
-    right: 0;
+    right: -100px;
     width: 100px;
     padding: 10px 0px 10px 10px;
     background: #8E5421;
@@ -199,7 +199,7 @@ display: none;
     position: relative;
     position: fixed;
     top:69%;
-    right: 0;
+    right: -100px;
     width: 100px;
     padding: 8px 0px 8px 10px; 
     background: #EF8B32;
@@ -274,15 +274,17 @@ p {
     
 }
 .btn button{
-    padding: 20px 15px ;
+    padding: 10px 15px ;
     font-size: 18px;
     margin: 0 20px;
-    border-radius: 20px;
     border: none;
-    background-color: #F6F6F6;
+    background-color: #c0a89b;
     cursor: pointer;
 }
-.content1{
+.btn button:hover{
+    background-color: #EF8B32;
+}
+#content1{
     display: block;
     text-align: left;
 }
@@ -317,18 +319,19 @@ h4 {
         padding: 0;
     }
     .btn{
-        width: 24%;
+        width: 15%;
         padding-left: 10px ;
     }
     .btn button {
         margin: 0;
         margin-bottom: 20px;
+        max-width: 50px;
     }
 
 }
 /* 麵包屑 */
 .breadcrumb{
-    width: 1200px;
+    width: 100%;
     margin: auto;
 }
 .breadcrumb ul{
@@ -429,12 +432,13 @@ h4 {
     }
     .account-icon{
         right: 0px;
-        bottom: 40px;
+        bottom: 15px;
     }
     .logo-phone , .logo-map{
         padding-bottom: 5px;
     }
     .footer-logo .address p{
         letter-spacing: 1px;
+        word-break: break-all;
     }
 }
